Refactor code into individual units

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(HyperDrive)
+project(HyperDrive VERSION 0.1.0)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -8,31 +8,30 @@ set(CMAKE_CXX_STANDARD 20)
 include(${CMAKE_BINARY_DIR}/generators/conan_toolchain.cmake)
 
 enable_testing()
-find_package(Boost CONFIG REQUIRED)
+find_package(Boost CONFIG REQUIRED COMPONENTS program_options)
 find_package(GTest CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-##
-# Project setup
-##
-# Include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
+add_subdirectory(include)
+add_subdirectory(src)
 
-# Executable
-add_executable(HyperDrive
-    "include/HyperDrive/DataSet.h"
-    "src/DataSet.cpp"
-    "src/main.cpp"
+# This is having a linker issue, commenting out for now
+# add_subdirectory(tests)
+
+##
+# App setup
+##
+add_executable(HyperDrive "src/main.cpp")
+
+target_compile_definitions(HyperDrive
+    PRIVATE
+        VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
+        VERSION_MINOR=${PROJECT_VERSION_MINOR}
+        VERSION_PATCH=${PROJECT_VERSION_PATCH}
 )
-
-message(STATUS "CONAN_LIBS ${CONAN_LIBS}")
 
 # Link libraries
 target_link_libraries(HyperDrive
     PRIVATE
-    boost::boost
-    nlohmann_json::nlohmann_json
+        HyperDriveLib
 )
-
-# Tests
-#add_subdirectory(tests)
