Renamed HyperDrive to JumpTo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(HyperDrive VERSION 0.1.0)
+project(JumpTo VERSION 0.1.0)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -19,9 +19,9 @@ add_subdirectory("tests")
 ##
 # App setup
 ##
-add_executable(HyperDrive "src/main.cpp")
+add_executable(JumpTo "src/main.cpp")
 
-target_compile_definitions(HyperDrive
+target_compile_definitions(JumpTo
     PRIVATE
         VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
         VERSION_MINOR=${PROJECT_VERSION_MINOR}
@@ -29,7 +29,7 @@ target_compile_definitions(HyperDrive
 )
 
 # Link libraries
-target_link_libraries(HyperDrive
+target_link_libraries(JumpTo
     PRIVATE
         HyperDriveLib
 )
